Add /lib/init/init-d-script to the list of known interpreters. (MR: !56)
/lib/init/init-d-script (provided by the "Essential" package sysvinit-utils)
can be used as an interpreter to write very short sysvinit scripts.

The recent thread on debian-devel made me look at this page to write an init
script for a package I maintain that only has a systemd service:

  http://people.skolelinux.org/pere/blog/Debian_init_d_boot_script_example_for_rsyslog.html

.. but there's a Lintian warning due to the shebang.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Prevent a false-positive in embedded-javascript-library as
       jquery-ui.structure.css is not shipped by libjs-jquery-ui.
       (Closes: #911311)
+  * data/scripts/interpreters:
+    + [CL] Apply a patch from Luca Boccassi to add /lib/init/init-d-script
+      to the list of known interpreters.  (MR: !56)
 
   * t/tests/*:
     + [CL] Apply a patch series from Felix Lechner to adjust some
