Apply a patch series from Felix Lechner to use relative paths in Lintian options. (MR: !54)

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,9 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Apply a patch series from Felix Lechner to move data for
       upstream tarballs to "orig" to facilitate the addition of tests
       related to upstream signatures.  (MR: !52)
+    + [CL] Apply a patch series from Felix Lechner to use relative paths in
+      Lintian options; a tight integration between the test runner and
+      harness is generally undesirable.  (MR: !54)
 
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Oct 2018 23:06:31 -0400
 
