t/templates: Move old template changelogs out of the way. (MR: !57)
The template sets for Debian packages come with changelogs stored at
`debian/changelog`. They are not part of the template set but describe changes
to the templates. They reside just next to files like `debian/changelog.in`,
which are valid templates. The awkward location necessitates some
accommodations when copying templates. This patch moves the changelogs out of
the way.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,7 +26,7 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Apply a patch from Luca Boccassi to add /lib/init/init-d-script
       to the list of known interpreters.  (MR: !56)
 
-  * t/tests/*:
+  * t/*:
     + [CL] Apply a patch series from Felix Lechner to adjust some
       build-dependencies that were discovered when backporting to stretch.
       (MR: !51)
@@ -36,6 +36,8 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Apply a patch series from Felix Lechner to use relative paths in
       Lintian options; a tight integration between the test runner and
       harness is generally undesirable.  (MR: !54)
+    + [CL] Apply a patch series from Felix Lechner to move the templated
+      changelogs away from template directory.  (MR: !57)
 
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Oct 2018 23:06:31 -0400
 
