--- a/debian/changelog
+++ b/debian/changelog
@@ -14,10 +14,6 @@ lintian (2.5.110) UNRELEASED; urgency=medium
       in the multi-arch-same-package-has-arch-specific-overrides tag.
       (Closes: #911355)
 
-  * data/binaries/spelling-exceptions:
-    + [CL] Add "Nees" to the list of spelling-error-in-binary exceptions to
-      accomodate instances referencing Georg Nees, an early pioneer of
-      computer art and generative graphics.
   * data/files/js-libraries:
     + [CL] Prevent a false-positive in embedded-javascript-library as
       jquery-ui.structure.css is not shipped by libjs-jquery-ui.
@@ -25,6 +21,10 @@ lintian (2.5.110) UNRELEASED; urgency=medium
   * data/scripts/interpreters:
     + [CL] Apply a patch from Luca Boccassi to add /lib/init/init-d-script
       to the list of known interpreters.  (MR: !56)
+  * data/spelling/*:
+    + [CL] Move the "needs" entry to the corrections-case file, preventing
+      false positives in the spelling-error-in-{binary,changelog} tags
+      that reference Georg Nees, an early pioneer of computer art.
 
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to adjust some
