--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Apply a patch series from Felix Lechner to fix a false-negative
       in the multi-arch-same-package-has-arch-specific-overrides tag.
       (Closes: #911355)
+  * checks/shared-libs.{desc,pm}:
+    + [CL] Emit a pedantic warning for packages that do not specify a
+      Build-Depends-Package field in their symbol files.  (Closes: #911451)
 
   * data/files/js-libraries:
     + [CL] Prevent a false-positive in embedded-javascript-library as
