--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.111) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 21 Oct 2018 21:48:28 -0400
+
 lintian (2.5.110) unstable; urgency=medium
 
   * Summary of tag changes:
