checks/menu-format.desc: Fix small typo in menu-format description: recognise. (MR: !59)
The description contained a small typo "recogninse".

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.111) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/menu-format.desc:
+    + [CL] Apply a patch from Salvatore Bonaccorso to fix a typo in the
+      description for the desktop-entry-lacks-icon-entry tag.  (MR: !59)
+
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Oct 2018 21:48:28 -0400
 
 lintian (2.5.110) unstable; urgency=medium
