Add a "recognise" connection (re. MR: !59)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ lintian (2.5.111) UNRELEASED; urgency=medium
     + [CL] Apply a patch from Salvatore Bonaccorso to fix a typo in the
       description for the desktop-entry-lacks-icon-entry tag.  (MR: !59)
 
+  * data/spelling/corrections:
+    + [CL] Add a "recognise" connection re. MR: !59.
+
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Oct 2018 21:48:28 -0400
 
 lintian (2.5.110) unstable; urgency=medium
