Add "superficial" to the list of known Restrictions in testsuite definitions.
This test restriction was added to autopkgtest in #904979.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ lintian (2.5.111) UNRELEASED; urgency=medium
   * data/spelling/corrections:
     + [CL] Add a "recognise" connection re. MR: !59.
 
+  * data/testsuite/known-restrictions:
+    + [CL] Apply a patch from intrigeri to add "superficial" to the list
+      of known restrictions in testsuite definitions.  This was added to
+      autopkgtest in #904979.  (MR: !60)
+
  -- Chris Lamb <lamby@debian.org>  Sun, 21 Oct 2018 21:48:28 -0400
 
 lintian (2.5.110) unstable; urgency=medium
