--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.111) UNRELEASED; urgency=medium
   * checks/menu-format.desc:
     + [CL] Apply a patch from Salvatore Bonaccorso to fix a typo in the
       description for the desktop-entry-lacks-icon-entry tag.  (MR: !59)
+  * checks/python.{desc,pm}:
+    + [CL] Check for packages that encode a version number in their
+      source package name.
   * checks/scripts.desc:
     + [CL] Warn about packages that use PIUPARTS_TEST (etc.) in their
       maintainer scripts.  Thanks to Holger Levsen.  (Closes: #912040)
