--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.112) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 29 Oct 2018 10:20:27 -0400
+
 lintian (2.5.111) unstable; urgency=medium
 
   * Summary of tag changes:
