Add Depends on dpkg-dev to ensure dpkg-architecture is available. (Closes: #912330)
Otherwise, lintian prints:

    Command 'dpkg-architecture' not found in /usr/local/sbin, /usr/local/bin, /usr/sbin, /usr/bin, /sbin, /bin at /usr/share/perl5/Lintian/Command.pm line 274.
     at /usr/share/lintian/checks/fields.pm line 387.

    internal error: cannot run fields check on package source:samba/2:4.9.1+dfsg-2
    warning: skipping check of source:samba/2:4.9.1+dfsg-2

and returns with exit code 1.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ lintian (2.5.112) UNRELEASED; urgency=medium
     + [CL] Apply patches from Bas Couwenberg to update the bytecode checks
       for OpenJDK 10 add bytecode number for OpenJDK 11.  (Closes: #912292)
 
+  * debian/control:
+    + [CL] Apply a patch from Mathieu Parent via MR !61 to add a dependency
+      on dpkg-dev to ensure dpkg-architecture is available.  Thanks!
+      (Closes: #912330)
+
   * vendors/ubuntu/main/data/changes-file/known-dists:
     + [CL] Add "disco" as a known Ubuntu distribution.
 
