--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ lintian (2.5.112) UNRELEASED; urgency=medium
 
   * data/java/constants:
     + [CL] Apply patches from Bas Couwenberg to update the bytecode checks
-      for OpenJDK 10 add bytecode number for OpenJDK 11.  (Closes #912292)
+      for OpenJDK 10 add bytecode number for OpenJDK 11.  (Closes: #912292)
 
   * vendors/ubuntu/main/data/changes-file/known-dists:
     + [CL] Add "disco" as a known Ubuntu distribution.
