--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ lintian (2.5.112) UNRELEASED; urgency=medium
     + [CL] Apply a patch series Felix Lechner to parameterise the source
       format in all applicable tests. The new field in "desc" is called
       "Source-Format".  (MR: !64)
+    + [CL] Apply a patch series from Felix Lechner to parameterise the
+      package architecture for all tests that build only single binary
+      package.  (MR: !68)
   * t/tests/basic-non-native-with-epoch/desc:
     + [CL] Apply a patch from Felix Lechner to correct a test "Type" field.
       (MR: !63)
