--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,8 @@ lintian (2.5.112) UNRELEASED; urgency=medium
       (Closes: #912330)
 
   * t/*:
-    + [CL] Apply a patch from Adam Conrad to fix two tests in Ubuntu by
-      lowering the Debhelper compat level.  Thanks!  (Closes: #913099)
+    + [CL] Apply a patch from Adam Conrad to fix two tests on non-amd64
+      architectures in Ubuntu.  Thanks!  (Closes: #913099)
     + [CL] Apply a patch series Felix Lechner to parameterise the source
       format in all applicable tests. The new field in "desc" is called
       "Source-Format".  (MR: !64)
