--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,9 @@ lintian (2.5.112) UNRELEASED; urgency=medium
   * checks/cruft.desc:
     + [CL] Bump the severity of the source-contains-prebuilt-windows-binary
       tag from "P:" to "W:" and update the description to mention that this
-      could be a DFSG violation.
+      could potentially be a DFSG violation.
   * checks/systemd.{desc,pm}:
-    + [CL] Warn if a PIDFile in a .service unit references /var/run.
+    + [CL] Warn if a PIDFile entry in a .service unit references /var/run.
       (Closes: #913078)
   * checks/upstream-signing-key.{desc,pm}:
     + [CL] Apply a patch series from Felix Lechner to add multiple tests
@@ -15,22 +15,21 @@ lintian (2.5.112) UNRELEASED; urgency=medium
 
   * data/java/constants:
     + [CL] Apply patches from Bas Couwenberg to update the bytecode checks
-      for OpenJDK 10 add bytecode number for OpenJDK 11.  (Closes: #912292)
+      for OpenJDK 11.  (Closes: #912292)
   * data/rules/rules-should-not-use:
     + [CL] Ensure --dbgsym-migration='quoted with spaces' is correctly
       displayed when emitting debug-symbol-migration-possibly-complete.
 
   * debian/control:
-    + [CL] Apply a patch from Mathieu Parent via MR !61 to add a dependency
-      on dpkg-dev to ensure dpkg-architecture is available.  Thanks!
+    + [CL] Apply a patch from Mathieu Parent to add a dependency on
+      dpkg-dev to ensure dpkg-architecture is available.  Thanks!
       (Closes: #912330)
 
   * t/*:
     + [CL] Apply a patch from Adam Conrad to fix two tests on non-amd64
       architectures in Ubuntu.  Thanks!  (Closes: #913099)
     + [CL] Apply a patch series Felix Lechner to parameterise the source
-      format in all applicable tests. The new field in "desc" is called
-      "Source-Format".  (MR: !64)
+      format in all applicable tests.  (MR: !64)
     + [CL] Apply a patch series from Felix Lechner to parameterise the
       package architecture for all tests that build only single binary
       package.  (MR: !68)
