--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.113) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 08 Nov 2018 23:53:24 +0100
+
 lintian (2.5.112) unstable; urgency=medium
 
   * Summary of tag changes:
