--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,11 @@ lintian (2.5.113) UNRELEASED; urgency=medium
       invalid-template-id-in-symbols-file and syntax-error-in-symbols-file
       tags.  Thanks!  (Closes: #913290)
 
+  * collection/java-info:
+    + [CL] Prevent an "uninitialized value" warning when processing
+      empty or otherwise truncated .class files.  Thanks to Branden
+      Robinson for the report.  (Closes: #913398)
+
   * data/files/fnames:
     + [CL] Check for packages that install files to /usr/share/hal as the
       hal package was removed from Debian in 2014.  Thanks to Paul Wise for
