--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ lintian (2.5.113) UNRELEASED; urgency=medium
     + [CL] Tidy file.
     + [CL] Suggest that hunspell-foo dictionary packages use the "text"
       section, not "localization".  (Closes: #913723)
+  * data/spelling/corrections:
+    + [AB] Add reduntant → redundant and a bunch of variants around
+      conditial, conditianal → conditional
 
   * t/scripts/spellintian.t:
     + [CL] Make the "No no-op correction present..." test failure messages
