--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,9 @@ lintian (2.5.113) UNRELEASED; urgency=medium
   * data/spelling/corrections:
     + [AB] Add "redundant" and a bunch of variants around "conditional".
 
+  * t/*:
+    + [CL] Apply a patch series from Felix Lechner to parameterise
+      the debhelper compatibility level in tests.  (MR: !73)
   * t/scripts/spellintian.t:
     + [CL] Make the "No no-op correction present..." test failure messages
       include the offending correction to make it easier to correct.
