--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.114) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 23 Nov 2018 23:39:18 +0100
+
 lintian (2.5.113) unstable; urgency=medium
 
   * Summary of tag changes:
